--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <meta name="citation_author" content="Anonymous">
   <meta name="citation_publication_date" content="2024">
   <meta name="citation_conference_title" content="Under Review">
-  <meta name="citation_pdf_url" content="AndroidControl-Pro-Magma-Manuscript.pdf">
+  <meta name="citation_pdf_url" content="static/images/AndroidControl-Pro-Magma-Manuscript.pdf">
   
   <title>AndroidControl-Pro - Anonymous | Research</title>
   
@@ -210,7 +210,7 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="AndroidControl-Pro-Magma-Manuscript.pdf" target="_blank"
+                  <a href="static/images/AndroidControl-Pro-Magma-Manuscript.pdf" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="fas fa-file-pdf"></i>
@@ -219,7 +219,7 @@
                 </a>
               </span>
 
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="supplementary.pdf" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
@@ -227,7 +227,7 @@
                 </span>
                 <span>Supplementary</span>
               </a>
-            </span>
+            </span> -->
 
             <span class="link-block">
               <a href="https://github.com/YOUR_REPO_HERE" target="_blank"
@@ -279,7 +279,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="method.pdf" alt="Overall pipeline of our work" id="main-method-image"/>
+      <img src="static/images/method.pdf" alt="Overall pipeline of our work" id="main-method-image"/>
       <h2 class="subtitle has-text-centered">
         <b>Our Integrated Pipeline.</b> Top: The Magma-R1 training process with GRPO. Bottom: The systematic benchmark purification process, transforming the flawed AndroidControl into the reliable AndroidControl-Pro.
       </h2>
@@ -326,19 +326,19 @@
       <h2 class="title is-3 has-text-centered">Key Results & Insights</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
-        <img src="data_quality_vs_quantity.pdf" alt="Data Quality vs. Quantity Graph"/>
+        <img src="static/images/data_quality_vs_quantity.pdf" alt="Data Quality vs. Quantity Graph"/>
         <h2 class="subtitle has-text-centered">
           <b>Quality over Quantity.</b> Our Magma-R1 model, trained on just 2,400 purified samples, decisively outperforms models trained on over 31k noisy samples.
         </h2>
       </div>
       <div class="item">
-        <img src="casestudy.pdf" alt="Examples of benchmark deficiencies"/>
+        <img src="static/images/casestudy.pdf" alt="Examples of benchmark deficiencies"/>
         <h2 class="subtitle has-text-centered">
           <b>Systematic Benchmark Flaws.</b> We identified three major error types in the original benchmark: Unclear Tasks, Multiple Valid Actions, and Wrong Ground Truth.
         </h2>
       </div>
       <div class="item">
-        <img src="sub_method.pdf" alt="Grounding Optimization from Point to Box"/>
+        <img src="static/images/sub_method.pdf" alt="Grounding Optimization from Point to Box"/>
         <h2 class="subtitle has-text-centered">
          <b>From Coordinate Matching to Intent Alignment.</b> We refine evaluation by checking if an action falls within the target element's bounding box, better reflecting user intent.
        </h2>
