--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     .publication-title {
         font-weight: 800;
         margin-bottom: 1rem !important;
+        line-height: 1.1 !important;  /* 调整行高让两行更紧凑 */
     }
     
     .publication-authors {
@@ -224,7 +225,10 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h3 class="title is-1 publication-title">AndroidControl-Pro: Revealing the True Potential of GUI Agents through Benchmark Purification</h3>
+            <h1 class="title is-1 publication-title">
+              AndroidControl-Pro:<br>
+              Revealing the True Potential of GUI Agents through Benchmark Purification
+            </h1>
             <div class="is-size-5 publication-authors" style="margin-bottom: 0.5rem;">
               <span class="author-block">
                 Anonymous Authors
