--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <div class="columns is-centered" style="margin-top: 2rem;">
       <div class="column is-four-fifths">
         <figure class="image">
-          <img src="static/images/table1.png" alt="Table 1: Performance comparison of GUI agents on AndroidControl-Pro" style="border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+          <img src="static/images/table1.jpg" alt="Table 1: Performance comparison of GUI agents on AndroidControl-Pro" style="border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         </figure>
         <p class="has-text-centered content is-small" style="margin-top: 1em;">
           <b>Table 1.</b> Performance comparison of GUI agents on AndroidControl-Pro. Grounding Accuracy (GA) for all models is evaluated using our proposed E<sub>bbox</sub>. The best results are in <b>bold</b>, and the second best are <u>underlined</u>.
@@ -409,7 +409,7 @@
     <div class="columns is-centered" style="margin-top: 3rem;">
       <div class="column is-four-fifths">
         <figure class="image">
-          <img src="static/images/table2.png" alt="Table 2: Ablation analysis of the benchmark purification process" style="border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+          <img src="static/images/table2.jpg" alt="Table 2: Ablation analysis of the benchmark purification process" style="border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         </figure>
         <p class="has-text-centered content is-small" style="margin-top: 1em;">
           <b>Table 2.</b> Ablation analysis of the benchmark purification process on the Hard subset. SR Impr. (G) shows the SR gain from Origin-Bench to AndroidControl-Pro-G. SR Impr. (T) shows the SR gain from AndroidControl-Pro-G to the final AndroidControl-Pro. Best results are in <b>bold</b>, second best are <u>underlined</u>.
